--- a/.classpath
+++ b/.classpath
@@ -2,16 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Codes/HTMLer/httpcomponents-client-4.2.2/lib/httpclient-4.2.2.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Codes/HTMLer/httpcomponents-client-4.2.2/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Codes/HTMLer/httpcomponents-client-4.2.2/lib/commons-logging-1.1.1.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Codes/HTMLer/httpcomponents-client-4.2.2/lib"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="C:/Codes/HTMLer/commons-io-2.4/commons-io-2.4.jar">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Codes/HTMLer/commons-io-2.4a"/>
@@ -47,10 +37,12 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Codes/HTMLer/commons-lang3-3.1"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Codes/HTMLer/httpcomponents-client-4.2.2/lib/httpcore-4.2.2.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Codes/HTMLer/httpcomponents-client-4.2.2/lib"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="C:/Codes/HTMLer/httpcomponents-client-4.3.2/lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Codes/HTMLer/httpcomponents-client-4.3.2/lib/httpclient-4.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Codes/HTMLer/httpcomponents-client-4.3.2/lib/commons-codec-1.6.jar"/>
+	<classpathentry kind="lib" path="C:/Codes/HTMLer/httpcomponents-client-4.3.2/lib/fluent-hc-4.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Codes/HTMLer/httpcomponents-client-4.3.2/lib/httpclient-cache-4.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Codes/HTMLer/httpcomponents-client-4.3.2/lib/httpcore-4.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Codes/HTMLer/httpcomponents-client-4.3.2/lib/httpmime-4.3.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
